--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,13 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
-  <!-- devise -->
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <!-- navbar -->
+    <%= render 'shared/navbar' %>
+    <!-- devise -->
+    <%= render 'shared/flashes' %>
+
     <%= yield %>
+
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
