--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,8 @@
 .banner{
   display: flex;
-  // background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('../../images/background.jpg');
+  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('../../images/homepage_background.jpg');
   align-items: center;
   justify-content: space-around;
-  background-color: grey;
   background-size: cover;
   height: 100vh;
   text-align: center;
