--- a/app/assets/stylesheets/components/_bookingcard.scss
+++ b/app/assets/stylesheets/components/_bookingcard.scss
@@ -8,7 +8,7 @@
 
 /* Body design */
 .product-body {
-  flex: 1 1 auto;
+  flex: 1 0 auto;
 }
 
 .product-body p {
@@ -21,12 +21,12 @@
 .product-image {
   border-radius: 10px;
   margin-right: 20px;
-  width: 175px;
+  flex: 0 0 20%;
 }
 
 /* Controls design */
 .product-controls {
-  display: flex;
+  display:flex;
   align-items: center;
   text-align: center;
   margin: 0px;
@@ -37,6 +37,8 @@
   font-size: 17px;
   color: #E6E6E6;
 }
+
+
 .product-controls-accept a:hover {
   color: #D3473C !important
 }
