--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,10 +1,2 @@
 @import "home";
-
-.flexbox {
-  display: flex;
-  justify-content: space-between;
-}
-
-.flex-item {
-  flex: 0 0 50%;
-}
+@import "bikes";
