--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Résults for your request :</h3>
-  <div class="flexbox">
-    <div class="content_left flex-item">
+  <div class="bikes-container">
+    <div class="content_left bikes-list">
       <div class="row">
       <% @bikes.each do |bike|%>
         <div class="col-xs-12 col-sm-6">
@@ -11,13 +11,13 @@
             <p><%= bike.detail %></p>
             </div>
             <img class="card-user avatar" src="user.jpg">
-            <a class="card-link" href="#" ></a>
+            <%= link_to "", bike_path(bike), class: "card-link"%>
           </div>
         </div>
       <% end %>
       </div>
     </div>
-    <div class="content-right flex-item">
+    <div class="content-right bikes-map">
 
     </div>
   </div>
