Modify Index Bike Filter

--- a/app/assets/stylesheets/pages/_bikes.scss
+++ b/app/assets/stylesheets/pages/_bikes.scss
@@ -7,6 +7,16 @@
   flex: 0 0 50%;
 }
 
-.bike-detail {
-  padding: 20px 0 40px 0;
+.bike-title {
+  padding-top: 40px;
 }
+
+.bike-detail {
+  padding: 20px 0 20px 0;
+}
+
+.btn-show-bike {
+  margin-top: 30px;
+}
+
+
