--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -7,7 +7,7 @@
           <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://lorempicsum.com/futurama/450/200/1');">
             <div class="card-city"><%= bike.city %></div>
             <div class="card-description">
-            <h2><%= bike.title %></h2>
+            <h2 class="bike-title"><%= bike.title %></h2>
             <p><%= bike.detail %></p>
             </div>
             <img class="card-user avatar" src="user.jpg">
