add first name and last name register

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,5 +29,9 @@ h2 {
 }
 
 .search{
-  padding-top: 40px;
+  padding: 40px;
+  width: 500px;
+  background-color: white;
+  border: 1px solid #999999;
+  border-radius: 5px;
 }
