--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="container">
+  <div class="pad">
     <div class="content_center">
       <h2 class="text-center">Sign up</h2>
 
