--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
             <%= label_tag(:electric, "Electric Bikes") %>
           </div>
           <div>
-            <%= submit_tag("Search"), class: "btn btn-" %>
+            <%= submit_tag("Search"), class: "btn btn-success" %>
           </div>
         <% end %>
       </div>
