--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+  <div class= "row">
+    <div class= "col-md-6 col-md-offset-3">
+      <h1> Your waiting bike demands </h1>
+    </div>
+  </div>
   <% @bookings.each do |booking| %>
     <div class="product">
       <img src="http://lorempixel.com/80/80" class="product-image" alt="">
@@ -6,8 +11,8 @@
         <h3><%= booking.bike.title %> </h3>
         <p> <%= booking.bike.detail[0...100]%></p>
         <ul class="list-inline product-controls hidden-sm hidden-xs">
-           <li> Début de location : <%= booking.start_date.day %></li>
-          </li> Fin de location : <%= booking.end_date.day %> </li>
+           <li> Début de location : <%= booking.start_date %></li>
+          </li> Fin de location : <%= booking.end_date %> </li>
         </ul>
       </div>
       <ul class="list-inline product-controls hidden-sm hidden-xs">
