Add modifications in bike index form

--- a/app/assets/stylesheets/components/_logos.scss
+++ b/app/assets/stylesheets/components/_logos.scss
@@ -1,4 +1,9 @@
-#show-bikes-logo {
+.show-bikes-logo {
   font-size: 35px;
   color: grey;
+  padding: 8px 15px 0 0;
+}
+
+.plug-logo, .plus-logo {
+  font-size: 30px;
 }
