--- a/app/assets/stylesheets/pages/_bikes.scss
+++ b/app/assets/stylesheets/pages/_bikes.scss
@@ -20,3 +20,15 @@
 }
 
 
+.form-bike-index {
+  padding: 30px 30px 8px 30px;
+}
+
+.bike-city-form, .bike-kind-form {
+  margin-right: 30px;
+}
+
+.btn-bike-form {
+  margin-left: 30px;
+  padding: 5px 25px 5px 25px
+}
