--- a/app/views/owner/bikes/new.html.erb
+++ b/app/views/owner/bikes/new.html.erb
@@ -22,7 +22,7 @@
         <%= f.input :price,require: true, autofocus: true  %>
 
         <p> Add Pictures</p>
-        <%= f.input :photo, as: :attachinary %>
+        <%= f.input :photos, as: :attachinary %>
         <%= f.button :submit, "Rent my bike" %>
       <% end %>
     </div>
