Add avatar feature for Bike Index

--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -27,8 +27,11 @@
             <h2 class="bike-title"><%= bike.title %></h2>
             <p><%= bike.detail %></p>
             </div>
-            <img class="card-user avatar" src="user.jpg">
-            <%= link_to "", bike_path(bike), class: "card-link"%>
+            <% user = @users.find(bike.user_id) %>
+            <% if user.photo %>
+              <%= cl_image_tag user.photo.path %>
+              <%= link_to "", bike_path(bike), class: "card-link"%>
+            <% end %>
           </div>
         </div>
       <% end %>
