--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,9 +29,13 @@ h2 {
 }
 
 .search{
-  padding: 40px;
+  padding: 60px;
   width: 500px;
-  background-color: white;
-  border: 1px solid #999999;
+  background-color: rgba(232, 232, 232, 0.5);
   border-radius: 5px;
 }
+
+.form-line{
+  padding: 5px;
+}
+
