work in progress

--- a/app/assets/stylesheets/components/_bookingcard.scss
+++ b/app/assets/stylesheets/components/_bookingcard.scss
@@ -15,7 +15,7 @@
 
 .product-body p {
   font-weight: lighter;
-  color: #999999;
+  color: grey;
   margin-bottom: 0;
 }
 
@@ -29,7 +29,7 @@
 /* Controls design */
 .product-controls {
   font-weight: lighter;
-  color: #999999;
+  color: grey;
   display:flex;
   align-items: center;
   text-align: center;
@@ -39,7 +39,7 @@
 .product-controls a {
   padding: 0 20px;
   font-size: 17px;
-  color: #E6E6E6;
+  color: black;
 }
 
 
