--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class= "row">
     <div class= "col-md-6 col-md-offset-3">
-      <h1> Your bike renter demands </h1>
+      <h1> Your waiting bike demands </h1>
     </div>
   </div>
   <% @bookings.each do |booking| %>
