Add Css To Show Bike View

--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -13,7 +13,7 @@
       <i class="fa fa-plus show-bikes-logo plus-logo" aria-hidden="true"></i>
       <i class="fa fa-plug show-bikes-logo plug-logo" aria-hidden="true"></i>
     <% else %>
-      <i class="fa fa-bicycle show-bikes-logo plug-logo" aria-hidden="true"></i>
+      <i class="fa fa-bicycle show-bikes-logo" aria-hidden="true"></i>
     <% end %>
     <div class="bike-detail">
       <%= @bike.detail %>
