--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner{
   display: flex;
-  background-image: url('backgound_bike.jpg');
+  background-image: image_url('backgound_bike.jpg');
   align-items: center;
   justify-content: space-around;
   background-size: cover;
