--- a/app/assets/stylesheets/components/_bookingcard.scss
+++ b/app/assets/stylesheets/components/_bookingcard.scss
@@ -70,3 +70,8 @@
 // .product:hover .product-upvote { transform: scale(1.2) }
 .product:hover .product-controls-hidden a { color: #E6E6E6 }
 .product-upvote:hover .product-arrow { border-bottom: 9px solid #5898f1 }
+
+
+.link-inactif:hover {
+  text-decoration: none;
+}
