--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,45 +13,39 @@
     <% if user_signed_in? %>
 
       <!-- Notification -->
-      <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
-        <div class="badge-container">
-          <i class="fa fa-envelope-o"></i>
-        </div>
-      <% end %>
 
-      <!-- Profile picture and dropdown -->
+          <!-- Profile picture and dropdown -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <% if current_user.photo? %>
+            <%= cl_image_tag current_user.photo.path , width: 30, height: 30 , class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <% else %>
+           <%= image_tag "http://placehold.it/30x30" , class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <% end %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to profile_path do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
+          <li>
+              <%= link_to "/" do %>
                 <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
               <% end %>
             </li>
             <li>
-              <%= link_to owner_bikes_path do %>
-                <i class="fa fa-bullhorn"></i>  <%= t(".profile", default: "My ads") %>
-              <% end %>
-            </li>
-            <li>
               <%= link_to bookings_path do %>
-                <i class="fa fa-bookmark-o"></i>  <%= t(".profile", default: "My rental") %>
+                <i class="fa fa-bookmark-o"></i>  <%= t(".profile", default: "Mes demande") %>
               <% end %>
             </li>
             <li>
               <%= link_to requests_path do %>
-                <i class="fa fa-bicycle"></i>  <%= t(".profile", default: "My rented bikes") %>
+                <i class="fa fa-bicycle"></i>  <%= t(".profile", default: "Mes location") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to profile_path do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Profil") %>
               <% end %>
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Déconexion") %>
               <% end %>
             </li>
           </ul>
@@ -66,7 +60,7 @@
     <% end %>
 
     <!-- Button (call-to-action) -->
-    <%= link_to "New bike", new_owner_bike_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+    <%= link_to "AJouter votre vélo", new_owner_bike_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
@@ -74,9 +68,31 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+       <li>
+          <%= link_to "/" do %>
+            <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to bookings_path do %>
+            <i class="fa fa-bookmark-o"></i>  <%= t(".profile", default: "Mes demande") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to requests_path do %>
+            <i class="fa fa-bicycle"></i>  <%= t(".profile", default: "Mes location") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to profile_path do %>
+            <i class="fa fa-user"></i> <%= t(".profile", default: "Profil") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+            <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Déconexion") %>
+          <% end %>
+        </li>
       </ul>
     </div>
   </div>
