--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class= "row">
     <div class= "col-md-6 col-md-offset-3">
-      <h1> Demandes de location </h1>
+      <h1> Mes demandes </h1>
     </div>
   </div>
   <% @bookings.each do |booking| %>
