--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,17 +25,22 @@
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
               <%= link_to "/" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+                <i class="fa fa-home"></i>  <%= t(".profile", default: "Acceuil") %>
               <% end %>
             </li>
             <li>
-              <%= link_to bookings_path do %>
-                <i class="fa fa-bookmark-o"></i>  <%= t(".profile", default: "Mes demande") %>
+              <%= link_to owner_bikes_path do %>
+                <i class="fa fa-bicycle"></i>  <%= t(".profile", default: "Gerer mes offres") %>
               <% end %>
             </li>
             <li>
               <%= link_to requests_path do %>
-                <i class="fa fa-bicycle"></i>  <%= t(".profile", default: "Mes location") %>
+                <i class="fa fa-bicycle"></i>  <%= t(".profile", default: "Mes offres") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to bookings_path do %>
+                <i class="fa fa-bookmark-o"></i>  <%= t(".profile", default: "Mes demandes") %>
               <% end %>
             </li>
             <li>
