--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,10 +1,11 @@
 .banner{
   display: flex;
   background-image: image_url('backgound_bike.jpg');
+  background-position: bottom;
   align-items: center;
   justify-content: space-around;
   background-size: cover;
-  height: 100vh;
+  height: 90vh;
   text-align: center;
 }
 
@@ -14,12 +15,11 @@
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   color: #FFFFFF;
   font-style: 'Raleway', bold;
-  font-size: 50px;
 }
 
 .banner-content p{
   font-style: 'Open Sans', thin ;
   font-size: 25px;
   color:#DEE8EF;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
