--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -3,9 +3,11 @@
  * ------------------------------------- */
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Maitree:400,700");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Raleway", "Helvetica", "sans-serif";
-
+$title-font: "Open Sans", "Helvetica", "sans-serif";
+$main-font: "Maitree", "Helvetica";
 // Local fonts (uncomment following lines)
 // @font-face {
 //   font-family: "Font Name";
@@ -32,3 +34,8 @@ $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
+
+$pink: #FB3640;
+$dark-grey: #484848;
+$light-grey: #ACAEB5;
+$green: #00A699;
