--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,21 +21,36 @@ h2 {
   margin-bottom: 30px;
   margin-top: 0;
 }
-.padded {
-  padding: 100px 0;
-}
+
 .wrapper-grey {
   background: #F4F4F4;
 }
 
 .search{
-  padding: 60px;
-  width: 500px;
+  padding: 60px 60px 30px 60px;
+  width: auto;
   background-color: rgba(232, 232, 232, 0.5);
   border-radius: 5px;
+  border: none;
 }
 
 .form-line{
   padding: 5px;
 }
+
+.btn_search{
+  background-color: $pink;
+  width: 100px;
+  border-radius:5%;
+  margin-top: 20px;
+}
+
+
+.cardrow{
+  padding-top: 80px;
+}
+
+label{
+  padding-right: 10px;
+  padding-left: 10px;}
 
