--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,12 +5,20 @@
   color: white;
   position: relative;
   margin: 20px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
 }
-.card-user {
+.card-avatar {
   position: absolute;
   right: 10px;
   top: 10px;
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
 }
+
 .card-city {
   position: absolute;
   top: 10px;
@@ -18,17 +26,12 @@
   font-size: 10px;
   text-transform: uppercase;
 }
-.card-description {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-}
+
 .card-description h2 {
   font-size: 24px;
+  line-height:175px;
 }
-.card-description p {
-  font-size: 13px;
-  }
+
 .card-link {
   position: absolute;
   top: 0;
