--- a/app/assets/stylesheets/pages/_bikes.scss
+++ b/app/assets/stylesheets/pages/_bikes.scss
@@ -24,11 +24,36 @@
   padding: 30px 30px 8px 30px;
 }
 
+.label-bike-tag{
+  color: $dark-grey;
+  font-weight: normal;
+  font-family: 'Open Sans';
+  padding-right: 15px;
+  font-size: 18px;
+}
+
 .bike-city-form, .bike-kind-form {
-  margin-right: 30px;
+  margin-right: 50px;
+  font-size: 15px;
+  height: 45px;
+  border-radius: 6px;
+  padding: 10px 16px;
+
 }
 
 .btn-bike-form {
-  margin-left: 30px;
-  padding: 5px 25px 5px 25px
+  margin-left: 50px;
+  padding: 5px 25px 5px 25px;
+  height: 45px;
+  background-color: $pink;
+  border-color: $pink;
 }
+
+.bike-index-title {
+  color: $dark-grey;
+  font-family: 'Raleway';
+  padding-left: 20px;
+  font-size: 22px;
+}
+
+
