designing going on

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
         <%= label_tag(:electric, "Velo electrique") %>
         <%= check_box_tag(:electric) %>
       <div>
-        <%= submit_tag("Chercher", class: "btn btn-danger btn_search ") %>
+        <%= submit_tag("Chercher", class: "btn btn-danger btn_main_cta ") %>
       </div>
       <% end %>
     </div>
