--- a/app/assets/stylesheets/components/_form_new_booking.scss
+++ b/app/assets/stylesheets/components/_form_new_booking.scss
@@ -1,4 +1,9 @@
-.form {
-  background-color: rgb(240,240,240);
-  padding:25px;
+.user_form{
+  background-color: $background-grey;
+  padding: 25px;
+}
+
+.user_form h1{
+  text-align: center;
+  margin-bottom: 40px;
 }
