--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,16 +1,3 @@
 <div class="container">
-  <div class="form">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h1>Booker votre velo </h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div class="card">
-          <%= render 'form', booking: @booking, bike: @bike %>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render 'booking_form', booking: @booking, bike: @bike %>
 </div>
