Add new css in ShowBikeView

--- a/app/assets/stylesheets/pages/_bikes.scss
+++ b/app/assets/stylesheets/pages/_bikes.scss
@@ -57,3 +57,14 @@
 }
 
 
+.wrapper-bike-img{
+  height:300px;
+  background-position: center;
+}
+
+.wrapper-bike-img h2{
+  height: 300px;
+  color: white;
+  font-family: 'Raleway';
+  font-size: 40px;
+}
