--- a/app/views/bookings/_booking_form.html.erb
+++ b/app/views/bookings/_booking_form.html.erb
@@ -4,10 +4,10 @@
 
   <div class="row">
     <div class="col-xs-12 col-md-6 text-center">
-    <%= f.input :start_date, label:"Début de location" , as: :date, start_year: Date.today.year %>
+    <%= f.input :start_date, label:"Début de location" , as: :date, html5: true %>
     </div>
     <div class="col-xs-12 col-md-6 text-center">
-      <%= f.input :end_date, label:"Fin de la location", as: :date, start_year: Date.today.year %>
+      <%= f.input :end_date, label:"Fin de la location", as: :date,html5: true %>
     </div>
   </div>
 
